[gd_scene load_steps=14 format=3 uid="uid://qgas0f5a707u"]

[ext_resource type="Script" uid="uid://dagd8pn234k01" path="res://scenes/entities/enemies/wolf/wolf.gd" id="1_jqx28"]
[ext_resource type="Texture2D" uid="uid://b605qj4yor8p7" path="res://assets/images/enemy/wolf_animation.png" id="2_r6xaq"]
[ext_resource type="Texture2D" uid="uid://hbrcluauojbn" path="res://assets/images/enemy/wolf_idle-Sheet.png" id="3_hptor"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r6xaq"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_hptor"]
atlas = ExtResource("2_r6xaq")
region = Rect2(60, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ooidh"]
atlas = ExtResource("2_r6xaq")
region = Rect2(90, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnhc7"]
atlas = ExtResource("3_hptor")
region = Rect2(0, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkgsx"]
atlas = ExtResource("3_hptor")
region = Rect2(30, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7y8b"]
atlas = ExtResource("3_hptor")
region = Rect2(60, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjtbn"]
atlas = ExtResource("3_hptor")
region = Rect2(30, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_u81vx"]
atlas = ExtResource("2_r6xaq")
region = Rect2(0, 0, 30, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_ooidh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hptor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooidh")
}],
"loop": true,
"name": &"anticipation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnhc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkgsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7y8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjtbn")
}],
"loop": true,
"name": &"idel",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u81vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u81vx")
}],
"loop": false,
"name": &"jump",
"speed": 7.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hptor"]
radius = 2.0

[node name="Wolf" type="Node2D"]
script = ExtResource("1_jqx28")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_r6xaq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ooidh")
animation = &"idel"
autoplay = "idel"

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_hptor")

[node name="WolfGrowlSoundEffect" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
volume_db = -25.0

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_right = 40.0
offset_bottom = 23.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
